--- a/canvas/collision/src/index.html
+++ b/canvas/collision/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Collection Detection</title>
-    <script type="module" defer src="/main.js"></script>
+    <script type="module" defer src="./canvas.js"></script>
   </head>
   <body>
-    <div id="app"></div>
+    <canvas></canvas>
   </body>
 </html>
